feat: add list styles

--- a/e-commerce-app/src/components/Card/Card.scss
+++ b/e-commerce-app/src/components/Card/Card.scss
@@ -1,3 +1,9 @@
-.card{
-    display: block;
+.Card{
+    display: flex;
+    width: 250px;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 40px;
+
+    
 }
