--- a/e-commerce-app/src/pages/ProductsPage/ProductsPage.scss
+++ b/e-commerce-app/src/pages/ProductsPage/ProductsPage.scss
@@ -1,10 +1,17 @@
+.form {
+    height: 60px;
+    margin: auto;
+}
+
 .left {
     width: 30%;
-    padding-left: 0.5rem;
-    margin-left: 0.5rem;
-    margin-top: 1rem;
+    padding-left: 1rem;
+    margin-left: 1rem;
     float: left;
     color: green;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .right {
@@ -12,18 +19,5 @@
     float: right;
     padding-right: 0.5rem;
     margin-right: 0.5rem;
-    margin-top: 1rem;
-}
-
-.ProductsPage {
-    padding: 30px 50px;
-    display: flex;
-
-    .left {
-        flex: 1;
-    }
-
-    .right {
-        flex: 3;
-    }
+    margin-top: 3rem;
 }
