feat: add link button

--- a/e-commerce-app/src/components/ProductsList/ProductsList.scss
+++ b/e-commerce-app/src/components/ProductsList/ProductsList.scss
@@ -7,6 +7,5 @@
 .cards-container {
     display: flex;
     justify-content: center;
-    gap: 100px;
-    margin-top: 50px;
+    flex-wrap: wrap;
 }
