--- a/e-commerce-app/src/pages/ProductsPage/ProductsPage.scss
+++ b/e-commerce-app/src/pages/ProductsPage/ProductsPage.scss
@@ -1,7 +1,3 @@
-.grid {
-    align-content: baseline;
-}
-
 .top {
     display: flex;
     width: 100%;
@@ -33,6 +29,6 @@
 .right {
     width: 65%;
     float: right;
-    padding-right: 0.5rem;
-    margin-right: 0.5rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
