--- a/e-commerce-app/src/components/ProductCard/ProductCard.module.scss
+++ b/e-commerce-app/src/components/ProductCard/ProductCard.module.scss
@@ -7,19 +7,22 @@
   padding: 1rem;
   border: 2px green double;
 
-  .prices {
+  &__text {
+    height: 100%;
     display: flex;
-    gap: 15px;
-
-    h2 {
-      font-size: large;
-      color: cadetblue;
-      font-weight: 900;
-    }
+    align-items: center;
+    flex-wrap: wrap;
   }
-
-  &__button {
-    background-color: beige;
-    color: green;
+  &__title {
+    width: 100%;
+    text-align: center;
+    color: cadetblue;
+    font-weight: 900;
+  }
+  &__price {
+    padding-top: 1rem;
+    width: 50%;
+    font-weight: 700;
+    text-align: center;
   }
 }
