--- a/e-commerce-app/src/components/ProductCard/ProductCard.module.scss
+++ b/e-commerce-app/src/components/ProductCard/ProductCard.module.scss
@@ -14,6 +14,10 @@
         transition: box-shadow .3s ease-in-out;
     }
 
+    &__tax {
+        box-shadow: 0px 0px 10px 5px #5ef16380 !important;
+    }
+
     &__text {
         height: 100%;
         display: flex;
@@ -33,5 +37,11 @@
         width: 50%;
         font-weight: 700;
         text-align: center;
+
+        &_sale {
+            text-decoration: line-through;
+            text-decoration-color: gray;
+            padding-top: 1rem;
+        }
     }
 }
