--- a/e-commerce-app/src/components/ProductsList/ProductsList.module.scss
+++ b/e-commerce-app/src/components/ProductsList/ProductsList.module.scss
@@ -4,3 +4,15 @@
     flex-wrap: wrap;
     gap: 1.5rem;
 }
+
+.empty__products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: gray;
+    font-size: 25px;
+}
+
+.img {
+    margin-top: 50px;
+}
