--- a/e-commerce-app/src/pages/HomePage/HomePage.module.scss
+++ b/e-commerce-app/src/pages/HomePage/HomePage.module.scss
@@ -7,12 +7,15 @@
         background-size: cover;
         background-position: center;
         position: relative;
-        height: 550px;
         display: flex;
         justify-content: center;
-        align-items: center;
+        padding-top: 10%;
+        height: 400px;
         color: green;
-        font-size: 3rem;
-        font-weight: 700;
+
+        p {
+            font-weight: 600;
+            text-align: center;
+        }
     }
 }
