--- a/e-commerce-app/src/pages/HomePage/HomePage.module.scss
+++ b/e-commerce-app/src/pages/HomePage/HomePage.module.scss
@@ -21,9 +21,10 @@
 
     .promoContainer{
         background-color: beige;
+        padding: 5%;
 
         .promoTitle {
-            padding-top: 5%;
+            padding-bottom: 3%;
             font-weight: 600;
             text-align: center;
         }
@@ -32,5 +33,28 @@
             border: 2px green dotted;
         }
     }
-    
+
+    .infoContainer{
+        padding: 7%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .infoImage{
+            background-image: url(../../assets/HomePageImg/PlantsRoom.png);
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            height: 460px;
+            position: relative;
+        }
+
+        .info_title {
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 30px;
+            font-weight: 600;
+            color: green;
+        }
+
+    }
 }
