feat: add footer.tsx file

--- a/e-commerce-app/src/pages/HomePage/HomePage.module.scss
+++ b/e-commerce-app/src/pages/HomePage/HomePage.module.scss
@@ -29,6 +29,12 @@
             text-align: center;
         }
 
+        .avatar {
+            width: 56px;
+            height: 56px;
+            margin-left: 42%;
+        }
+
         .code {
             border: 2px green dotted;
         }
